--- a/pages/chat.html
+++ b/pages/chat.html
@@ -1,13 +1,15 @@
 
- ---
- layout: default
- comments: true 
- # other options
- ---
+---
+layout: mypost
+title: 留言板
+---
 
- In between a {% if page.comments %} and a {% endif %} tag, copy and paste the Universal Embed Code in the appropriate template where you'd like Disqus to load.
+<p>留言功能你可以使用"吐个槽"</p>
+[吐个槽]（https://support.qq.com/product/365559）
 
- Note: Comments can be disabled per-page by setting comments: false or by not including the comments option at all.
+链接：https://support.qq.com/product/365559
+
+当然如果你是可以使用github的，你可以disqus
 
 <div id="disqus_thread"></div>
 <script>
