--- a/pages/chat.html
+++ b/pages/chat.html
@@ -2,10 +2,11 @@
 ---
 layout: mypost
 title: 留言板
+categories: [留言,disqus,吐个槽]
 ---
 
-<p>留言功能你可以使用"吐个槽"</p>
-[吐个槽]（https://support.qq.com/product/365559）
+<p> 留言功能你可以使用"吐个槽"</p>
+<br> [吐个槽](https://support.qq.com/product/365559)
 
 链接：https://support.qq.com/product/365559
 
