--- a/pages/chat.html
+++ b/pages/chat.html
@@ -4,11 +4,12 @@ title: 留言板
 ---
 
 <p> 留言功能你可以使用"吐个槽"</p>
-<br> [吐个槽](https://support.qq.com/product/365559)
+<br> <a href="https://support.qq.com/product/365559">[吐个槽]</a> 
+<br> 链接： <a href="https://support.qq.com/product/365559">https://support.qq.com/product/365559</a> 
 
-链接：https://support.qq.com/product/365559
 
-当然如果你是可以使用github的，你可以disqus
+<h4>如果你可以看到下面的内容：</h4>
+<br> 说明你是可以使用github的，你可以disqus
 
 <div id="disqus_thread"></div>
 <script>
