--- a/pages/chat.html
+++ b/pages/chat.html
@@ -2,12 +2,12 @@
 layout: mypost
 title: 留言板
 ---
-<p> 留言功能你可以使用"吐个槽"</p>
-<br> <a href="https://support.qq.com/product/365559">[吐个槽]</a> 
-<br> 链接： <a href="https://support.qq.com/product/365559">https://support.qq.com/product/365559</a> 
-
-<h4>如果你可以看到下面的内容：</h4>
-<br> 说明你是可以使用github的，你可以disqus
+<h2>留言方式一：</h2>
+<p> 留言功能你可以使用腾讯的 "吐个槽"</p>
+<br> 链接：<a href="https://support.qq.com/product/365559">https://support.qq.com/product/365559</a> 
+<h2>留言方式二：</h2>
+<h3>如果你可以看到下面的内容：</h3>
+<h3>说明你是可以使用github的，你可以disqus留言</h3>
 
 <div id="disqus_thread"></div>
 <script>
