--- a/pages/chat.html
+++ b/pages/chat.html
@@ -6,26 +6,12 @@ title: 留言板
 <p> 留言功能你可以使用腾讯的 "吐个槽"</p>
 <br> 链接：<a href="https://support.qq.com/product/365559">https://support.qq.com/product/365559</a> 
 <h2>留言方式二：</h2>
-<h3>如果你可以看到下面的内容：</h3>
-<h3>说明你是可以使用github的，你可以disqus留言</h3>
-
-<div id="disqus_thread"></div>
-<script>
-    /**
-    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-    /*
-    var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-    };
-    */
-    (function() { // DON'T EDIT BELOW THIS LINE
-    var d = document, s = d.createElement('script');
-    s.src = 'https://zahui.disqus.com/embed.js';
-    s.setAttribute('data-timestamp', +new Date());
-    (d.head || d.body).appendChild(s);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<div id="cusdis_thread"
+  data-host="https://cusdis.com"
+  data-app-id="58a256fa-4ac6-4d0a-9a4c-d57558079c75"
+  data-page-id="{{ PAGE_ID }}"
+  data-page-url="{{ PAGE_URL }}"
+  data-page-title="{{ PAGE_TITLE }}"
+></div>
+<script async defer src="https://cusdis.com/js/cusdis.es.js"></script>
 
