--- a/pages/chat.html
+++ b/pages/chat.html
@@ -2,10 +2,10 @@
 layout: mypost
 title: 留言板
 ---
-<h2>留言方式一：</h2>
-<p> 留言功能你可以使用腾讯的 "吐个槽"</p>
-<br> 链接：<a href="https://support.qq.com/product/365559">https://support.qq.com/product/365559</a> 
-<h2>留言方式二：</h2>
+留言采用的Cusdis。需要审核后展示，如果您提交后显示以下内容，表示留言成功。
+Your comment has been sent. Please wait for approval.
+欢迎留言，如果需要回复请填写真实邮箱 THX
+
 <div id="cusdis_thread"
   data-host="https://cusdis.com"
   data-app-id="58a256fa-4ac6-4d0a-9a4c-d57558079c75"
