--- a/pages/chat.html
+++ b/pages/chat.html
@@ -2,8 +2,10 @@
 layout: mypost
 title: 留言板
 ---
-留言采用的Cusdis。需要审核后展示，如果您提交后显示以下内容，表示留言成功。
-Your comment has been sent. Please wait for approval.
+留言需要审核后展示。
+<br>如果您提交后显示以下内容，表示留言成功：
+<br>Your comment has been sent. Please wait for approval.
+
 欢迎留言，如果需要回复请填写真实邮箱 THX
 
 <div id="cusdis_thread"
