--- a/pages/chat.html
+++ b/pages/chat.html
@@ -2,11 +2,12 @@
 layout: mypost
 title: 留言板
 ---
-留言需要审核后展示。
+留言需要审核后展示。如果没有看到留言框，你可能需要刷新或者科学一下。
 <br>如果您提交后显示以下内容，表示留言成功：
 <br>Your comment has been sent. Please wait for approval.
+<br> #您的留言已发送，请等待审核。
 
-欢迎留言，如果需要回复请填写真实邮箱 THX
+<br>欢迎留言，如果需要回复请填写真实邮箱 THX
 
 <div id="cusdis_thread"
   data-host="https://cusdis.com"
