--- a/pages/chat.html
+++ b/pages/chat.html
@@ -2,12 +2,12 @@
 layout: mypost
 title: 留言板
 ---
-留言需要审核后展示。如果没有看到留言框，你可能需要刷新或者科学一下。 :pray:
-<br>如果您提交后显示以下内容，表示留言成功：:thumbsup:
-<br>Your comment has been sent. Please wait for approval. :thumbsup:
-<br> #您的留言已发送，请等待审核。:thumbsup:
+留言需要审核后展示。如果没有看到留言框，你可能需要刷新或者科学一下。 ❤️
+<br>如果您提交后显示以下内容，表示留言成功：👍
+<br>Your comment has been sent. Please wait for approval. 👍
+<br> #您的留言已发送，请等待审核。👌
 
-<font color="#A52A2A">欢迎留言，建议填写 **真实邮箱** 并在正文留下你的 **网站地址** ，方便回访 THX</font> :heart:
+欢迎留言，建议填写 **真实邮箱** 并在正文留下你的 **网站地址** ，方便回访 THX ❤️
 
 <div id="cusdis_thread"
   data-host="https://cusdis.com"
@@ -17,4 +17,3 @@ title: 留言板
   data-page-title="{{ PAGE_TITLE }}"
 ></div>
 <script async defer src="https://cusdis.com/js/cusdis.es.js"></script>
-
