--- a/pages/chat.html
+++ b/pages/chat.html
@@ -3,11 +3,8 @@ layout: mypost
 title: 留言板
 ---
 留言需要审核后展示。如果没有看到留言框，你可能需要刷新或者科学一下。 ❤️
-<br>如果您提交后显示以下内容，表示留言成功：👍
-<br>Your comment has been sent. Please wait for approval. 👍
-<br> #您的留言已发送，请等待审核。👌
-
-欢迎留言，建议填写 **真实邮箱** 并在正文留下你的 **网站地址** ，方便回访 THX ❤️
+<br>提交后显示以下内容，表示留言成功：Your comment has been sent. Please wait for approval. 👍
+<br> #您的留言已发送，请等待审核。<br>欢迎留言，建议填写<font color="#FF2400 "><b><u>真实邮箱(保密的)</b></u></font><br>并在留言中留下你的<font color="#FF2400 "><b><u>网站地址</b></u></font>，方便回访 THX ❤️
 
 <div id="cusdis_thread"
   data-host="https://cusdis.com"
