--- a/pages/chat.html
+++ b/pages/chat.html
@@ -8,7 +8,7 @@ title: 留言板
 
  <!-- 下面是twikoo的评论模块 -->
 <div id="tcomment"></div>
-<script src="https://registry.npmmirror.com/twikoo/1.6.41/files/dist/twikoo.min.js"></script>
+<script src="https://lib.baomitu.com/twikoo/1.6.41/twikoo.all.min.js"></script>
 <script>
 twikoo.init({
   envId: 'https://zacom.netlify.app/.netlify/functions/twikoo', 
