--- a/pages/chat.html
+++ b/pages/chat.html
@@ -8,7 +8,7 @@ title: 留言板
 
  <!-- 下面是twikoo的评论模块 -->
 <div id="tcomment"></div>
-<script src="https://cdn.jsdelivr.net/npm/twikoo@1.6.42/dist/twikoo.all.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/twikoo@1.6.42/dist/twikoo.min.js"></script>
 <script>
 twikoo.init({
   envId: 'https://zacom.netlify.app/.netlify/functions/twikoo', // 腾讯云环境填 envId；Vercel 环境填地址（https://xxx.vercel.app）
